change template index.html

--- a/render/templates/render/index.html
+++ b/render/templates/render/index.html
@@ -36,8 +36,8 @@
 <body>
 
   <div class="jumbotron text-center">
-    <h1>Tech Theme</h1>
-    <p>Um exemplo de tema usando Bootstrap</p>
+    <h1>Deploy com Render</h1>
+    <p> Apenas um exemplo de deploy Django</p>
   </div>
 
   <div class="container">
